--- a/3. Faster-R-CNN-Project/Lib/DataSplitFunction/DataSplitFunction.ipynb
+++ b/3. Faster-R-CNN-Project/Lib/DataSplitFunction/DataSplitFunction.ipynb
@@ -58,8 +58,8 @@
    "outputs": [],
    "source": [
     "total_num    = 9963  # Return : 9963\n",
-    "total_list   = range(0, total_num-1)\n",
-    "total_list_arr = np.arange(0, total_num)\n",
+    "total_list   = range(1, total_num)\n",
+    "total_list_arr = np.arange(1, total_num+1)\n",
     "total_list_arr = set(total_list_arr)\n",
     "\n",
     "trainval_percent = 0.9\n",
@@ -186,8 +186,8 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20])"
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 13, 14, 15, 16, 17, 18, 19,\n",
+       "       20, 21, 22])"
       ]
      },
      "execution_count": 6,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 12,  49,  57,  58,  59,  65,  77,  83, 103, 137])"
+       "array([ 0, 11, 12, 32, 37, 40, 48, 77, 86, 95])"
       ]
      },
      "execution_count": 7,
